--- a/ui/admin/hub.html
+++ b/ui/admin/hub.html
@@ -138,6 +138,11 @@ button{
 <body>
 
 <header>
+   <div class="brand">
+    <img src="https://webex.onenecklab.com/assets/ussignal-logo.jpg" />
+    <h1>Partner Admin Hub</h1>
+  </div>
+  
   <div class="logo">US Signal | Partner Admin Hub</div>
 
   <div class="header-actions">
