--- a/ui/admin/hub.html
+++ b/ui/admin/hub.html
@@ -138,12 +138,16 @@ button{
 <body>
 
 <header>
-   <div class="brand">
+  <!-- <div class="brand">
     <img src="https://webex.onenecklab.com/assets/ussignal-logo.jpg" />
     <h1>Partner Admin Hub</h1>
   </div>
+  -->
   
-  <div class="logo">US Signal | Partner Admin Hub</div>
+  <div class="logo">
+     <img src="https://webex.onenecklab.com/assets/ussignal-logo.jpg" />
+     <h1>US Signal | Partner Admin Hub </h1>
+  </div>
 
   <div class="header-actions">
     <span class="session" id="sessionTimer"></span>
