Add logo styling to admin hub

--- a/ui/admin/hub.html
+++ b/ui/admin/hub.html
@@ -133,6 +133,19 @@ button{
   font-size:13px;
   color:var(--muted);
 }
+  .logo {
+  display:flex;
+  align-items:center;
+  gap:16px;
+}
+
+.logo img { height:34px; }
+
+.logo h1 {
+  margin:0;
+  font-size:18px;
+  font-weight:700;
+}
 </style>
 </head>
 <body>
