Add navigation links to customer index page

--- a/ui/customer/index.html
+++ b/ui/customer/index.html
@@ -185,6 +185,24 @@ main {
 <body>
 
 <header>
+   <nav style="
+  background:var(--card);
+  padding:12px 30px;
+  border-bottom:1px solid rgba(0,0,0,.08);
+  display:flex;
+  gap:18px;
+  flex-wrap:wrap;
+">
+  <a href="/customer">Dashboard</a>
+  <a href="/customer/licenses">Licenses</a>
+  <a href="/customer/devices">Devices</a>
+  <a href="/customer/analytics">Analytics</a>
+  <a href="/customer/cdr">CDR</a>
+  <a href="/customer/maintenance">Maintenance</a>
+  <a href="/customer/status">Status</a>
+  <a href="/customer/incidents">Incidents</a>
+</nav>
+
   <div class="brand">
     <img src="https://webex.onenecklab.com/assets/ussignal-logo.jpg" />
     <h1>Customer Hub</h1>
