Add navigation bar to incidents page

--- a/ui/customer/incidents.html
+++ b/ui/customer/incidents.html
@@ -148,6 +148,24 @@ button {
 <body>
 
 <header>
+  <nav style="
+  background:var(--card);
+  padding:12px 30px;
+  border-bottom:1px solid rgba(0,0,0,.08);
+  display:flex;
+  gap:18px;
+  flex-wrap:wrap;
+">
+  <a href="/customer">Dashboard</a>
+  <a href="/customer/licenses">Licenses</a>
+  <a href="/customer/devices">Devices</a>
+  <a href="/customer/analytics">Analytics</a>
+  <a href="/customer/cdr">CDR</a>
+  <a href="/customer/maintenance">Maintenance</a>
+  <a href="/customer/status">Status</a>
+  <a href="/customer/incidents">Incidents</a>
+</nav>
+
   <div>
     <strong>Webex Incident History</strong>
     <div id="tenantBadge" style="margin-top:4px;font-size:13px;color:var(--muted);"></div>
